Finish Circular Progress

--- a/index.html
+++ b/index.html
@@ -1,15 +1,21 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-        <meta charset="utf-8">
-        <title>Basic Front Boilerplate</title>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="https://fonts.googleapis.com/css?family=Nunito:400,800&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="sass/style.scss">
-    </head>
+  <head>
+    <meta charset="utf-8" />
+    <title>Barra de Progresso Circular com CSS Puro</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito:400,800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="sass/style.scss" />
+  </head>
 
-    <body>
-    </body>
+  <body>
+    <span class="c-circular-progress c-circular-progress--4"></span>
+    <span class="c-circular-progress c-circular-progress--16"></span>
+    <span class="c-circular-progress c-circular-progress--23"></span>
+  </body>
 
-    <script src="js/index.js"></script>
+  <script src="js/index.js"></script>
 </html>
